Turtle
import turtle
fred = turtle.Pen()
fred.shape("turtle")
fred.forward(100)
fred.left(90)
fred.forward(100)
fred.left(90)
fred.forward(100)
fred.left(90)
fred.forward(100)
fred.reset()
fred.color("red")
fred.forward(100)
fred.circle(100)
fred.circle(-100)
fred.reset()
fred.color("blue")
fre.forward(100)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
NameError: name 'fre' is not defined
fred.forward(100)
fred.up()
fred.forward(100)
fred.down()
fred,circle(150)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
NameError: name 'circle' is not defined
fred.circle(50)
fred.forward(100)
fred.width(5)
fred.forward(100)
fred.reset()
fred.("greed")
... fred.color("green")
  File "<input>", line 1
    fred.("greed")
         ^
SyntaxError: invalid syntax
fred.color("green")
fred.circle(50)
fred.circle(-75)
fred.up()
fred.down()
fred.up()
fred.right(90)
fred.forward(75)
fred(forward(75))
Traceback (most recent call last):
  File "<input>", line 1, in <module>
NameError: name 'forward' is not defined
fred.forward(75)
fred.left(90)
fred.circle(100)
fred.down()
fred.circle(-100)
fred.reset()
fred.color("red")
fred.circle(25)
fred.reset()
fred.color("red")
fred.width(2)
fred.circle(25)
fred.width(2)
fred.circle(-50)
fred.up()
fred.right(90)
fred.forward(75)
fred.forward(5)
fred.forward(5)
fred.forward(5)
fred.forward(5)
fred.left(90)
fred.down()
fred.circle(-75)
fred.up()
fred.left(90)
fred.forward(100)
fred.forward(20)
fred.forward(10)
fred.forward(5)
fred.forward(5)
fred.down()
fred.left(90)
fred.forward(50)
fred.right(90)
fred.forward(25)
fred.right(90)
fred.forward(25)
fred.left(90)
fred.forward(10)
fred.right(90)
fred.forward(50)
fred.right(90)
fred.forward(10)
fred.left(90)
fred.forward(25)
fred.right(90)
fred.forward(25)
fred.right(90)
fred.forward(50)
fred.up()
fred.left(90)
fred.forward(5)
fred.right(90)
fred.undo()
fred.forward(5)
fred.right(90)
fred.forward(5)
fred.width(2)
fred.circle(2)
fred.up()
fred.right(180)
fred.forward(5)
fred.undo()
fred.undo()
fred.undo()
fred.down()
fred.width(3)
fred.circle(3)
fred.right(180)
fred.up()
fred.forward(10)
fred.undi
Traceback (most recent call last):
  File "<input>", line 1, in <module>
AttributeError: 'Turtle' object has no attribute 'undi'
fred.undo()
fred.undo()
fred.undo()
fred.undo()
fred.up()
fred.forward(5)
fred.width(100)
fred.(circle3)
... fred.circle(3)
  File "<input>", line 1
    fred.(circle3)
         ^
SyntaxError: invalid syntax
fred.circle(3)
fred.up()
fred.left(90)
fred.fowrward(75)
Traceback (most recent call last):
  File "<input>", line 1, in <module>
AttributeError: 'Turtle' object has no attribute 'fowrward'
fred.forward(75)
fred.right(90)
fred.forward(25)
fred.forward(10)
fred.left(45)
fred.down()
fred.forward(25)
fred.undo()
fred.width(2)
fred.forward(25)
fred.undo()
fred.forward(50)
fred.up()
fred.right(135)
fred.undo()
fred.left(135)
fred.forward(200)
fred.undo()
fred.forward(100)
fred.left(90)
fred.forward(10)
fred.forward(20)
fred.right(90)
fred.forward(20)
fred.right(45)
fred.down()
fred.forward(150)
fred.undo()
fred.forward(50)
fred.up()
fred.right(135)
fred.forward(50)
fred.right(90)
fred.forward(50)
fred.undo()
fred.forward(25)
fred.left(90)
fred.forward(10)
fred.forward(10)
fred.width(50)
fred.down()
fred.circle(10)
fred.undo
<bound method RawTurtle.undo of <turtle.Turtle object at 0x10976b100>>
fred.undo()
fred.width(5)
fred.circle(10)
fred.undo()
fred.up()
fred.right(90)
fred.forward(5)
fred.left(90)
fred.forward(5)
fred.down()
fred.circle(10)
fred.up(fred.left(90))
Traceback (most recent call last):
  File "<input>", line 1, in <module>
TypeError: penup() takes 1 positional argument but 2 were given
fred.left(90)
fred.undo()
fred.forward(50)
fred.undo()
fred.up()
fred.forward(50)
fred.forward(50)
fred.down()
fred.circle(10)
fred.undo()
fred.right(45)
fred.circle(10)
fred.up()
fred.forward(100)
fred.forward(50)
